# ansible-collection

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  VERSION.toml  devfile.yaml  failed.json  galaxy.yml  gen_docs.py  get_kanidm_attrs.py  process_failed.py  pyproject.toml  requirements.txt  setup-tests.fish  setup-tests.sh  test-requirements.txt  tox-ansible.ini
.github/workflows/: release.yml  tests.yml  unit.yaml
changelogs/: config.yaml
docs/docsite/: links.yml
failed/: addimage.json  addredirecturlhttpsnextcloudexamplecomappsoauth2apiv1token.json  addredirecturlhttpsnextcloudexamplecomappsoauth2authorize.json  addredirecturlhttpsnextcloudexamplecomindexphpappsoauth2apiv1token.json  addredirecturlhttpsnextcloudexamplecomindexphpappsoauth2authorize.json  checktoken.json  getclient.json  loginbegin.json  logininit.json  loginsend.json  setlegacycrypto.json  setlocalhostredirect.json  setpkce.json  setpreferredusername.json  setstrictredirect.json  updatescopemap.json
hacking/: setup-env.fish
plugins/action/: kanidm.py
plugins/doc_fragments/: customclaim.py  image.py  kanidm_create_oauth.py  kanidm_create_oauth_options.py  kanidmconf.py  kanidmgroupargs.py  kanidmoauthargs.py  kanidmpersonargs.py  optiontype.py  prefusername.py  scope.py  supscope.py
plugins/lookup/: hello_world.py
plugins/module_utils/: ansible_specs.py  arg_specs.py  base_exception.py  kanidm.py  kanidm_runner.py  verify.py
plugins/module_utils/kanidm/: arg_specs.py  exceptions.py  runner.py
plugins/module_utils/kanidm/arg_specs/: conf.py  group.py  oauth.py  oauth_sub.py  person.py
plugins/module_utils/kanidm/runner/: api.py  attrs.py  group.py  oauth.py  person.py
plugins/modules/: kanidm.py  kanidm_create_group.py  kanidm_create_oauth.py  kanidm_create_person.py
roles/run/: README.md
roles/run/meta/: main.yml
tests/integration/targets/hello_world/tasks/: main.yml
tests/unit/: requirements.txt  test_basic.py  test_kanidm.py  test_kanidm_create_group.py  test_kanidm_create_oauth.py  test_kanidm_create_person.py
