[project]
name = "ansible-collection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible>=11.2.0",
    "ansible-core>=2.18.3",
    "ansible-dev-tools>=25.2.1",
    "ansible-lint>=25.1.3",
    "pykanidm>=1.0.0",
]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
addopts = ["-vvv", "-n", "2", "--log-level", "WARNING", "--color", "yes"]
filterwarnings = ['ignore:AnsibleCollectionFinder has already been configured']
testpaths = ["tests"]
