[project]
name = "ansible-collection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible>=11.2.0",
    "ansible-core>=2.18.3",
    "ansible-dev-tools>=25.2.1",
    "ansible-lint>=25.1.3",
    "pykanidm>=1.0.0",
]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
addopts = ["-vvv", "-n", "2", "--log-level", "WARNING", "--color", "yes"]
filterwarnings = ['ignore:AnsibleCollectionFinder has already been configured']
testpaths = ["tests"]

[dependency-groups]
test = ["molecule>=25.3.1", "pytest-ansible>=25.1.0", "pytest-xdist>=3.6.1"]

[tool.tox.env_run_base]
pass_env = [
    "CONTAINER_HOST",
    "DOCKER_HOST",
    "CONTAINER_TLS_VERIFY",
    "DOCKER_TLS_VERIFY",
    "CONTAINER_IDENTITY",
    "DOCKER_IDENTITY",
    "CONTAINER_TIMEOUT",
    "DOCKER_TIMEOUT",
    "CONTAINER_VERSION",
    "DOCKER_VERSION",
    "CONTAINER_CONNECTION",
    "DOCKER_CONNECTION",
    "CONTAINER_AGENT",
    "DOCKER_AGENT",
]
[tool.tox.ansible]
pass_env = [
    "CONTAINER_HOST",
    "DOCKER_HOST",
    "CONTAINER_SSL_VERIFY",
    "CONTAINER_TLS_VERIFY",
    "DOCKER_SSL_VERIFY",
    "DOCKER_TLS_VERIFY",
]
