[project]
name = "ansible-collection"
version = "1.0.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible>=11.2.0",
    "ansible-core>=2.18.3",
    "ansible-dev-tools>=25.2.1",
    "ansible-lint>=25.1.3",
    "requests>=2.32",
    "requests-toolbelt>=1",
]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
addopts = [
    "--ansible-unit-inject-only",
    "-vvv",
    "-n",
    "2",
    "--log-level",
    "WARNING",
    "--color",
    "yes",
]
filterwarnings = ['ignore:AnsibleCollectionFinder has already been configured']
testpaths = ["tests"]

[dependency-groups]
test = ["molecule>=25.3.1", "pytest-ansible>=25.1.0", "pytest-xdist>=3.6.1"]

[tool.tox.env_run_base]
allowlist_externals = [
    "bash",
    "podman",
    "docker",
    "fish",
    "./setup-tests.sh",
    "./setup-tests.fish",
    "setup-tests.sh",
    "setup-tests.fish",
]
commands_pre = [["./setup-tests.sh"]]
pass_env = ["ANSIBLE_VERBOSITY", "LOG_DIR"]
